--- a/case1.html
+++ b/case1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case 1.1, Salling Rooftop</title>
     <link rel="stylesheet" type="text/css" href="css/styling.css">
+     	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    
 
 </head>
 
@@ -31,13 +33,13 @@
 
     </header>
     
-    <img class="articlepic mellemrum roundcor" src="images/salling.jpg" width="80%" alt="salling rooftop i solskin">
+    <img class="articlepic articlepicm mellemrum roundcor roundcorm" src="images/salling.jpg" width="80%" alt="salling rooftop i solskin">
 
-    <h1 class="artikelrubrik">Case 1.1: Århus Kulturhovedstad</h1>
+    <h1 class="artikelrubrik artikelrubrikm">Case 1.1: Århus Kulturhovedstad</h1>
     <br>
-    <h2 class="ses">Salling Rooftop</h2>
+    <h2 class="ses sesm">Salling Rooftop</h2>
 
-    <div class="articletekst">
+    <div class="articletekst articletekstm">
 
 
         <article>
