--- a/case2.html
+++ b/case2.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case 1.2, Online magasin, Ung i Aarhus</title>
     <link rel="stylesheet" type="text/css" href="css/styling.css">
+     	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    
 
 </head>
 
@@ -30,13 +32,13 @@
             </ul>
 
         </header>
-        <img class="articlepic mellemrum" src="images/unglogo.png" width="80%" alt="Online magasinet 'ung i Aarhus' logo">
+        <img class="articlepic articlepicm uiaa mellemrum" src="images/unglogo.png" width="80%" alt="Online magasinet 'ung i Aarhus' logo">
 
-    <h1 class="artikelrubrik">Case 1.2: Online magasin</h1>
+    <h1 class="artikelrubrik artikelrubrikm">Case 1.2: Online magasin</h1>
     <br>
-    <h2 class="ses">Ung i Aarhus</h2>
+    <h2 class="ses sesm">Ung i Aarhus</h2>
 
-    <div class="articletekst">
+    <div class="articletekst articletekstm">
 
 
         <article>
