--- a/cases.html
+++ b/cases.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cases 1. semester</title>
     <link rel="stylesheet" type="text/css" href="css/styling.css">
+     	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    
 
 </head>
 
