--- a/case1.html
+++ b/case1.html
@@ -38,6 +38,8 @@
     <h1 class="artikelrubrik artikelrubrikm">Case 1.1: Århus Kulturhovedstad</h1>
     <br>
     <h2 class="ses sesm">Salling Rooftop</h2>
+    <br>
+    <a class="ses sesm" href="https://sim0n12345.github.io/salling/">Gå til Salling Rooftop</a>
 
     <div class="articletekst articletekstm">
 
@@ -67,7 +69,7 @@
                 <h3>Konklusion for case 1.1</h3>
                 Taget i betragtning at case 1.1 var det første projekt vi udarbejde, er produktet veludført, da det opfylder de krav, som på daværende tidspunkt var gældende, men med den viden der besiddes nu, er det tydeligt at der mangler mange elementer før produktet er tilfredsstillende, og i forhold til de krav der stilles nu, både fra underviser, men også fra en selv, ville produktet og projektet skulle have været langt mere udarbejdet, og der skulle have været en langt mere omfangsrig og dybdegående forarbejdelse, før produktionen af det egentlige produkt begyndte, da det ville have resulteret med et bedre produkt. På trods af manglerne og manglende erfaring er produktet i frohold til kravene tilfredsstillende, men med tydelig mangel på viden indenfor fagene. 
             </section>
-        </article>
+            </article>
     </div>
 
 
