--- a/case2.html
+++ b/case2.html
@@ -37,6 +37,7 @@
     <h1 class="artikelrubrik artikelrubrikm">Case 1.2: Online magasin</h1>
     <br>
     <h2 class="ses sesm">Ung i Aarhus</h2>
+    <a class="ses sesm" href="https://sim0n12345.github.io">Gå til Ung i Aarhus</a>
 
     <div class="articletekst articletekstm">
 
