--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="page1">
         <a id="forside" class="smooth"></a>
         <div class="container">
-            <img class="roundcor" src="images/bjerge3.jpg" width="100%" height="1000px" alt="de tyske alper">
+            <img class="testbillede roundcor" src="images/bjerge3.jpg" width="100%" height="1000px" alt="de tyske alper">
             <div class="centered">
                 <h1>Portfolio Eksamen</h1>
                 <p>Denne hjemmeside er udarbejdet af Simon Høgh,<br> i forbindelse med eksamen på 1. semester af<br> mulitmediedesignerudannelsen 2017</p>
@@ -69,7 +69,7 @@
     <div id="page3">
         <a id="om_mig" class="smooth"></a>
   <div class="container2">
-                <img class="pagephotobot" src="images/mig.jpg" width="100%" height="1000px">
+                <img class="pagephotobot" src="images/mig.jpg" width="100%" height="1000px" alt="billede af mig">
                 <div class="centered3">
                 <h1>Om mig</h1>
                 <p> Jeg er personen bag denne hjemmeside.<br>En ung mand på 21 år, som<br> er bosiddende i Århus.
