--- a/case1.html
+++ b/case1.html
@@ -39,7 +39,7 @@
     <br>
     <h2 class="ses sesm">Salling Rooftop</h2>
     <br>
-    <a class="ses sesm" href="https://sim0n12345.github.io/salling/">Gå til Salling Rooftop</a>
+    <a class="ses sesm" href="https://sim0n12345.github.io/salling/" target="_blank">Gå til Salling Rooftop</a>
 
     <div class="articletekst articletekstm">
 
