--- a/case3.html
+++ b/case3.html
@@ -38,7 +38,7 @@
     <h1 class="artikelrubrik artikelrubrikm">Case 1.3: Responsive webdesign</h1>
   
     <h2 class="ses sesm">Café Stiften</h2>
-    <a class="ses sesm" href="https://wrd.dk/stiften/">Gå til Stiften</a>
+    <a class="ses sesm" href="https://wrd.dk/stiften/" target="_blank">Gå til Stiften</a>
    
     <div class="articletekst articletekstm">
 
