--- a/ommig.html
+++ b/ommig.html
@@ -46,7 +46,7 @@
                         <p>
                 <a href="tel:+4553307737" class="contactbg textcontact"><i class="fa fa-fw fa-phone"></i>+45 53 30 77 37</a>
                             
-                    <a href="mailto: simon.hoegh@hotmail.com" class="contactbg textcontact"><i class="fa fa-fw fa-envelope"></i> simon.hoegh@hotmail.com</a>
+                    <a href="mailto: simon.hoegh@hotmail.com" class="contactbg textcontact"><i class="fa fa-fw fa-envelope"></i> </a>
                         </p>
                        </div>
                     <p>Eller følges på:</p>
